--- a/app/blog.html
+++ b/app/blog.html
@@ -74,9 +74,11 @@
             <div class="blog__post-img radius">
               <img src="images/blog-post-1.png" alt="">
             </div>
-            <div class="blog__post-name">
-              9 tips for pregnant women to survive the summer heat
-            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                9 tips for pregnant women to survive the summer heat
+              </div>
+            </a>
             <div class="blog__post-description">
               Summer, hurray! The days are longer and the temperature is soaring that we can't wait to get out...
             </div>
@@ -89,9 +91,11 @@
             <div class="blog__post-img radius">
               <img src="images/blog-post-2.png" alt="">
             </div>
-            <div class="blog__post-name">
-              How to choose a highchair?
-            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                How to choose a highchair?
+              </div>
+            </a>
             <div class="blog__post-description">
               The translation of the child into the prophet symbolizes the need to train additional seats in one chair
               ...
@@ -105,71 +109,11 @@
             <div class="blog__post-img radius">
               <img src="images/blog-post-3.png" alt="">
             </div>
-            <div class="blog__post-name">
-              Children's room arrangement: the secrets of modern design
-            </div>
-            <div class="blog__post-description">
-              Children's room arrangement: the secrets of modern design
-            </div>
-            <div class="blog__post-info">
-              <div class="blog__post-date">2 days ago</div>
-              <div class="blog__post-read">6 min read</div>
-            </div>
-          </div>
-          <div class="blog__post-wrapper">
-            <div class="blog__post-img radius">
-              <img src="images/blog-post-4.png" alt="">
-            </div>
-            <div class="blog__post-name">
-              20 modern nursery design ideas
-            </div>
-            <div class="blog__post-description">
-              A child's own room is his little world, where he spends part of his time. And the fashionable and original
-              interior will also...
-            </div>
-            <div class="blog__post-info">
-              <div class="blog__post-date">2 days ago</div>
-              <div class="blog__post-read">6 min read</div>
-            </div>
-          </div>
-          <div class="blog__post-wrapper">
-            <div class="blog__post-img radius">
-              <img src="images/blog-post-1.png" alt="">
-            </div>
-            <div class="blog__post-name">
-              9 tips for pregnant women to survive the summer heat
-            </div>
-            <div class="blog__post-description">
-              Summer, hurray! The days are longer and the temperature is soaring that we can't wait to get out...
-            </div>
-            <div class="blog__post-info">
-              <div class="blog__post-date">2 days ago</div>
-              <div class="blog__post-read">6 min read</div>
-            </div>
-          </div>
-          <div class="blog__post-wrapper">
-            <div class="blog__post-img radius">
-              <img src="images/blog-post-2.png" alt="">
-            </div>
-            <div class="blog__post-name">
-              How to choose a highchair?
-            </div>
-            <div class="blog__post-description">
-              The translation of the child into the prophet symbolizes the need to train additional seats in one chair
-              ...
-            </div>
-            <div class="blog__post-info">
-              <div class="blog__post-date">2 days ago</div>
-              <div class="blog__post-read">6 min read</div>
-            </div>
-          </div>
-          <div class="blog__post-wrapper">
-            <div class="blog__post-img radius">
-              <img src="images/blog-post-3.png" alt="">
-            </div>
-            <div class="blog__post-name">
-              Children's room arrangement: the secrets of modern design
-            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                Children's room arrangement: the secrets of modern design
+              </div>
+            </a>
             <div class="blog__post-description">
               We learn to properly equip a room for a newborn, preschool and school age child. Rooms for boys, girls and
               two children...
@@ -183,9 +127,82 @@
             <div class="blog__post-img radius">
               <img src="images/blog-post-4.png" alt="">
             </div>
-            <div class="blog__post-name">
-              20 modern nursery design ideas
+            <a href="#">
+              <div class="blog__post-name">
+                20 modern nursery design ideas
+              </div>
+            </a>
+            <div class="blog__post-description">
+              A child's own room is his little world, where he spends part of his time. And the fashionable and original
+              interior will also...
             </div>
+            <div class="blog__post-info">
+              <div class="blog__post-date">2 days ago</div>
+              <div class="blog__post-read">6 min read</div>
+            </div>
+          </div>
+          <div class="blog__post-wrapper">
+            <div class="blog__post-img radius">
+              <img src="images/blog-post-1.png" alt="">
+            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                9 tips for pregnant women to survive the summer heat
+              </div>
+            </a>
+            <div class="blog__post-description">
+              Summer, hurray! The days are longer and the temperature is soaring that we can't wait to get out...
+            </div>
+            <div class="blog__post-info">
+              <div class="blog__post-date">2 days ago</div>
+              <div class="blog__post-read">6 min read</div>
+            </div>
+          </div>
+          <div class="blog__post-wrapper">
+            <div class="blog__post-img radius">
+              <img src="images/blog-post-2.png" alt="">
+            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                How to choose a highchair?
+              </div>
+            </a>
+            <div class="blog__post-description">
+              The translation of the child into the prophet symbolizes the need to train additional seats in one chair
+              ...
+            </div>
+            <div class="blog__post-info">
+              <div class="blog__post-date">2 days ago</div>
+              <div class="blog__post-read">6 min read</div>
+            </div>
+          </div>
+          <div class="blog__post-wrapper">
+            <div class="blog__post-img radius">
+              <img src="images/blog-post-3.png" alt="">
+            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                Children's room arrangement: the secrets of modern design
+              </div>
+            </a>
+            <div class="blog__post-description">
+              We learn to properly equip a room for a newborn, preschool and school age child. Rooms for boys, girls and
+              two children...
+            </div>
+            <div class="blog__post-info">
+              <div class="blog__post-date">2 days ago</div>
+              <div class="blog__post-read">6 min read</div>
+            </div>
+          </div>
+          <div class="blog__post-wrapper">
+            <div class="blog__post-img radius">
+              <img src="images/blog-post-4.png" alt="">
+            </div>
+            <a href="#">
+              <div class="blog__post-name">
+                20 modern nursery design ideas
+              </div>
+            </a>
             <div class="blog__post-description">
               A child's own room is his little world, where he spends part of his time. And the fashionable and original
               interior will also...
