--- a/app/blog-post.html
+++ b/app/blog-post.html
@@ -182,7 +182,7 @@
           <div class="slider__title">Related products</div>
           <div class="swiper-wrapper">
             <div class="card swiper-slide">
-              <div class="card__img radius">
+              <div class="card__img slider__img radius">
                 <img src="images/card-img1.png" alt="">
               </div>
               <div class="card__info">
@@ -193,7 +193,7 @@
               </div>
             </div>
             <div class="card swiper-slide">
-              <div class="card__img radius">
+              <div class="card__img slider__img radius">
                 <img src="images/card-img2.png" alt="">
               </div>
               <div class="card__info">
@@ -204,7 +204,7 @@
               </div>
             </div>
             <div class="card swiper-slide">
-              <div class="card__img radius">
+              <div class="card__img slider__img radius">
                 <img src="images/card-img3.png" alt="">
               </div>
               <div class="card__info">
@@ -215,7 +215,7 @@
               </div>
             </div>
             <div class="card swiper-slide">
-              <div class="card__img radius">
+              <div class="card__img slider__img radius">
                 <img src="images/card-img4.png" alt="">
               </div>
               <div class="card__info">
@@ -226,7 +226,7 @@
               </div>
             </div>
             <div class="card swiper-slide">
-              <div class="card__img radius">
+              <div class="card__img slider__img radius">
                 <img src="images/card-img5.png" alt="">
               </div>
               <div class="card__info">
